<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kidus11.googlebookslist.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/asking_user"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:hint="@string/books"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.1"
                android:text="@string/search_button" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/empty_layout_relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/no_book_check"
            style="@style/no_books"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true">

            <TextView

                android:id="@+id/no_books"
                style="@style/no_books"
                android:layout_marginBottom="1dp"
                android:text="@string/no_string"
                android:textSize="30sp" />

            <TextView

                android:id="@+id/search_for_a_book"
                style="@style/no_books"
                android:layout_below="@id/no_books"
                android:text="@string/search"
                android:textSize="20sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/no_internet_connecton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_book_check"
            android:layout_centerHorizontal="true"
            android:text="@string/no_internet" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:divider="@null"
            android:orientation="vertical" />


    </RelativeLayout>


</LinearLayout>
